--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=7",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "symfony/http-foundation": "^3.2"
     },
     "autoload": {
         "psr-4": {
