--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": ">=7",
         "ext-curl": "*",
         "symfony/http-foundation": "^3.2",
-        "denisyukphp/tmpfile": "^1.0",
+        "denisyukphp/tmpfile": "^1.0"
     },
     "autoload": {
         "psr-4": {
