--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "denisyukphp/uploaded-url",
+    "license": "MIT",
     "authors": [
         {
             "name": "Aleksandr Denisyuk",
